# shioaji-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  NOTICE  README.md  README_en-US.md  main.py  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: docker-publish.yml  docker.yml  pr-checks.yml  test.yml
docs/: CONTAINER_REGISTRY.md  DOCKER_SETUP.md  SERVICE_TERMS.md
examples/: basic_usage.py  mcp_config.json  mcp_config_trading_enabled.json  python_client.py  real_usage.py
scripts/: test_docker_setup.sh
src/shioaji_mcp/: __init__.py  __main__.py  server.py
src/shioaji_mcp/resources/: __init__.py
src/shioaji_mcp/tools/: __init__.py  contracts.py  market_data.py  orders.py  positions.py  terms.py
src/shioaji_mcp/utils/: __init__.py  auth.py  formatters.py  mock_shioaji.py  permissions.py  shioaji_wrapper.py
tests/: __init__.py  test_auth.py  test_market_data.py  test_permissions.py  test_server.py  test_trading.py
