[project]
name = "shioaji-mcp"
version = "0.1.0"
description = "Shioaji MCP Server - Convert Shioaji Python package to MCP server"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{name = "Shioaji MCP Contributors", email = "contributors@example.com"}]
license = {text = "MIT"}
keywords = ["mcp", "shioaji", "trading", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "shioaji==1.2.5",
]

[project.scripts]
shioaji-mcp = "shioaji_mcp.server:cli_main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
lint = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
